--- a/css/styles.css
+++ b/css/styles.css
@@ -63,9 +63,12 @@ p{
 
 /* Title Section */
 
+#title{
+    text-align: left;
+}
+
 #title .container-fluid{
   padding: 3% 15% 7%;
-  text-align: left;
 }
 
 .btoon{
